<resources>
    <string name="app_name">Bake It!</string>
    <string name="ingredient_button">Ingredients</string>
    <string name="steps_button">Steps</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="quantity_value">1.67</string>
    <string name="measure_label">Measure:</string>
    <string name="quantity_label">QTY:</string>
    <string name="measure_value">1.78</string>
    <string name="ingredient_name">Ingredient_name</string>
    <string name="step_short_desc">Short Description</string>
    <string name="step_long_desc">Long Description</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="recipe_activity_label">Awesome Recipes</string>
    <string name="ingredient_activity_label">Ingredients</string>
    <string name="movie_name">Nutsia Pie</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">No Desired Recipe Yet</string>
    <string name="recipe_ingredient">Recipe Ingredients</string>
    <string name="first_pie">Nutella Pie</string>
    <string name="image_desc">Image</string>
</resources>
